--- a/sitio/index.html
+++ b/sitio/index.html
@@ -8,12 +8,36 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+
+    <!-- barra de navegacion-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div>
-            
+        <div class="container">
+
+            <a class="navbar-brand" href="#inicio">
+                <img src="img/logo.png" alt="ElectroTec Logo" width="40" height="40" class="me-2">
+                <span style="color: orange;">Electro</span><span style="color: #007bff;">Tec</span>
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#nosotros">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+
+                </ul>
+
+            </div>
+
         </div>
 
     </nav>
+
+    <!--Inicio-->
     
 </body>
 </html>
