--- a/sitio/index.html
+++ b/sitio/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElectroTec - Servicios electricos y domotica</title>
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -30,14 +31,93 @@
                     <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
 
                 </ul>
-
             </div>
-
         </div>
-
     </nav>
 
     <!--Inicio-->
-    
+        <header id="inicio" class="header text-white text-center d-flex align-items-center">
+        <div class="container">
+            <h1 class="display-3 fw-bold titulo-principal">
+            <span class="bienvenidos">Bienvenidos a</span> 
+            <span class="electro">Electro</span><span class="tec">Tec</span>
+            </h1>
+            <p class="lead subtitulo">Servicios Eléctricos y Domótica para el Hogar</p>
+
+        </div>
+        </header>
+
+    <!--servicios-->
+     <section id="servicios" class="py-5">
+    <div class="container text-center">
+      <h2 class="mb-4">Nuestros Servicios</h2>
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow">
+            <div class="card-body">
+              <h4 class="card-title">Instalaciones Eléctricas</h4>
+              <p class="card-text">Montaje, reparación y mantenimiento de redes eléctricas.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow">
+            <div class="card-body">
+              <h4 class="card-title">Domótica</h4>
+              <p class="card-text">Automatización de iluminación, seguridad y climatización.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow">
+            <div class="card-body">
+              <h4 class="card-title">Mantenimiento</h4>
+              <p class="card-text">Soporte técnico y revisiones periódicas para empresas y hogares.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- 🔵 Nosotros -->
+  <section id="nosotros" class="bg-light py-5">
+    <div class="container text-center">
+      <h2 class="mb-4">Sobre Nosotros</h2>
+      <p class="lead">En <strong>ElectroTec</strong> contamos con un equipo profesional especializado en electricidad y domótica. Brindamos soluciones modernas, seguras y eficientes, adaptadas a las necesidades de nuestros clientes.</p>
+    </div>
+  </section>
+
+  <!-- 🔵 Contacto -->
+  <section id="contacto" class="py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">Contacto</h2>
+      <form class="col-md-8 mx-auto">
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="nombre" placeholder="Tu nombre">
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Correo</label>
+          <input type="email" class="form-control" id="email" placeholder="Tu correo">
+        </div>
+        <div class="mb-3">
+          <label for="mensaje" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribí tu consulta"></textarea>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <!-- 🔵 Footer -->
+  <footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2025 ElectroTec - Todos los derechos reservados</p>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
