--- a/sitio/index.html
+++ b/sitio/index.html
@@ -90,25 +90,10 @@
 
   <!-- 🔵 Contacto -->
   <section id="contacto" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">Contacto</h2>
-      <form class="col-md-8 mx-auto">
-        <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="nombre" placeholder="Tu nombre">
-        </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Correo</label>
-          <input type="email" class="form-control" id="email" placeholder="Tu correo">
-        </div>
-        <div class="mb-3">
-          <label for="mensaje" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribí tu consulta"></textarea>
-        </div>
-        <div class="text-center">
-          <button type="submit" class="btn btn-primary">Enviar</button>
-        </div>
-      </form>
+    <div class="text-center">
+      <a href="https://forms.gle/RtPMguCxQekRRDD57" target="_blank" class="btn btn-primary">
+        Enviar
+      </a>
     </div>
   </section>
 
