Agregados botones y secciones de detalle de servicios

--- a/sitio/index.html
+++ b/sitio/index.html
@@ -66,6 +66,7 @@
           <div class="card-body">
             <h4 class="card-title">Instalaciones Eléctricas</h4>
             <p class="card-text">Montaje, reparación y mantenimiento de redes eléctricas.</p>
+            <a href="#instalaciones-detalle" class="btn btn-warning mt-3">Ver más</a>
           </div>
         </div>
       </article>
@@ -79,9 +80,11 @@
           <div class="card-body">
             <h4 class="card-title">Domótica</h4>
             <p class="card-text">Automatización de iluminación, seguridad y climatización.</p>
+            <a href="#domotica-detalle" class="btn btn-primary mt-3">Ver más</a>
           </div>
         </div>
       </article>
+
 
       <!-- Mantenimiento -->
       <article class="col-md-4">
@@ -92,6 +95,7 @@
           <div class="card-body">
             <h4 class="card-title">Mantenimiento</h4>
             <p class="card-text">Soporte técnico y revisiones periódicas para empresas y hogares.</p>
+            <a href="#mantenimiento-detalle" class="btn btn-info mt-3">Ver más</a>
           </div>
         </div>
       </article>
@@ -100,6 +104,48 @@
   </div>
 </section>
 
+<!-- Detalle Instalaciones Eléctricas -->
+<section id="instalaciones-detalle" class="py-5 bg-light">
+  <div class="container">
+    <h2 style="color: #ff7b00;">Instalaciones Eléctricas</h2>
+    <p>En ElectroTec realizamos instalaciones eléctricas seguras y eficientes, incluyendo:</p>
+    <ul>
+      <li>Montaje de redes eléctricas residenciales y comerciales</li>
+      <li>Reparación de fallas y cortocircuitos</li>
+      <li>Actualización de instalaciones antiguas</li>
+      <li>Asesoramiento en eficiencia energética</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Detalle Domótica -->
+<section id="domotica-detalle" class="py-5 bg-light">
+  <div class="container">
+    <h2 style="color: #1e90ff;">Domótica</h2>
+    <p>En ElectroTec ofrecemos soluciones de domótica para mejorar la comodidad y seguridad de tu hogar o empresa:</p>
+    <ul>
+      <li>Control inteligente de iluminación y persianas</li>
+      <li>Sistemas de seguridad y cámaras conectadas</li>
+      <li>Automatización de climatización</li>
+      <li>Integración de dispositivos IoT para gestión remota</li>
+    </ul>
+  </div>
+</section>
+
+
+<!-- Detalle Mantenimiento -->
+<section id="mantenimiento-detalle" class="py-5 bg-light">
+  <div class="container">
+    <h2 style="color: #00c2cb;">Mantenimiento</h2>
+    <p>Ofrecemos servicios de mantenimiento programado y soporte técnico para:</p>
+    <ul>
+      <li>Empresas e industrias</li>
+      <li>Hogares y edificios residenciales</li>
+      <li>Inspecciones periódicas de seguridad</li>
+      <li>Revisión y reemplazo de equipos eléctricos</li>
+    </ul>
+  </div>
+</section>
 
 
   <!-- Nosotros -->
@@ -112,44 +158,58 @@
 
 
   <!--Equipo-->
-<section id="equipo" class="py-5 bg-light text-center">
-  <h2 class="mb-4">Nuestro equipo</h2>
-  <div class="row justify-content-center">
+  <section id="equipo" class="py-5 bg-light text-center">
+    <h2 class="mb-4">Nuestro equipo</h2>
+    <div class="row justify-content-center">
 
 
-    <!-- Marcos Altamirano -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100 shadow">
-        <img src="img/altamirano.jpeg" class="card-img-top" alt="Marcos Nicolas Altamirano">
-        <div class="card-body">
-          <h5 class="card-title">Marcos Nicolas Altamirano</h5>
-          <p class="card-text">Estudiante de programación con cursos en inteligencia artificial y bases de datos, desarrollando la web de ElectroTec.</p>
+      <!-- Marcos Altamirano -->
+      <div class="col-md-4 mb-4">
+        <div class="card h-100 shadow">
+          <img src="img/altamirano.jpeg" class="card-img-top" alt="Marcos Nicolas Altamirano">
+          <div class="card-body">
+            <h5 class="card-title">Marcos Nicolas Altamirano</h5>
+            <p class="card-text">Estudiante de programación con cursos en inteligencia artificial y bases de datos, desarrollando la web de ElectroTec.</p>
+          </div>
         </div>
       </div>
-    </div>
 
 
-    <!-- Marcos Funes -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100 shadow">
-        <img src="img/funes.jpeg" class="card-img-top" alt="Marcos Abel Funes">
-        <div class="card-body">
-          <h5 class="card-title">Marcos Abel Funes</h5>
-          <p class="card-text">Electricista matriculado, operario de redes eléctricas media y baja tensión y estudiante de desarrollo de software.</p>
+      <!-- Marcos Funes -->
+      <div class="col-md-4 mb-4">
+        <div class="card h-100 shadow">
+          <img src="img/funes.jpeg" class="card-img-top" alt="Marcos Abel Funes">
+          <div class="card-body">
+            <h5 class="card-title">Marcos Abel Funes</h5>
+            <p class="card-text">Electricista matriculado, operario de redes eléctricas media y baja tensión y estudiante de desarrollo de software.</p>
+          </div>
         </div>
       </div>
-    </div>
 
-  </div>
-</section>
+    </div>
+  </section>
+
 
 
   <!--Contacto -->
-<section id="contacto" class="py-5 text-center">
-    <a href="https://forms.gle/RtPMguCxQekRRDD57" target="_blank" class="btn-uiverse">
-        Enviar opiniones
-    </a>
-</section>
+  <section id="contacto" class="py-5 text-center bg-light">
+    <h2 style="color:#007bff;">Contacto</h2>
+    <p>Puedes comunicarte con nosotros por los siguientes medios:</p>
+
+    <ul class="list-unstyled">
+      <li><i class="bi bi-telephone-fill"></i> Teléfono: +5493585139793</li>
+      <li><i class="bi bi-envelope-fill"></i> Email: electrotechargentina4@gmail.com</li>
+      <li><i class="bi bi-geo-alt-fill"></i> Dirección: Alejandro Roca 543,Rio Cuarto, Argentina</li>
+    </ul>
+
+    <div class="mt-3">
+      <a href="https://www.youtube.com/@ElectroTecArg" target="_blank" class="btn btn-primary me-2">
+        <i class="bi bi-youtube"></i> youtube
+      </a>
+    </div>
+  </section>
+
+
 
 
 
